--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,6 @@ jobs:
         with:
           python-version: 3.11
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install wheel setuptools
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+        run: make install
       - name: Run test
-        run: |
-          python -m pytest tests
+        run: make test
