--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,21 +7,21 @@ readme = "README.md"
 packages = [{ include = "notion_toolkit", from = "src" }]
 
 [tool.poetry.dependencies]
-python = "3.12.*"
+python = ">=3.11,<3.13"
 pydantic = "^2.6.3"
 rich = "^13.7.1"
 python-dotenv = "^1.0.1"
 notion-client = "^2.2.1"
-black = {extras = ["jupyter"], version = "^24.2.0"}
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
 pytest-mock = "^3.12.0"
 pytest-cov = "^4.1.0"
-black = "^24.2.0"
+black = {extras = ["jupyter"], version = "^24.2.0"}
 isort = "^5.13.2"
 flake8 = "^7.0.0"
+ipykernel = "^6.29.3"
 
 
 [tool.poetry.group.cli.dependencies]
